spec/test/parser/valid/constructors/constructor_overloading.java
protected class A {
  public A() {}
  public A(int x) {}
}

