spec/test/parser/invalid/_custom/class_bad_constructor_name.java
public class ClassBadConstructorName {
    public NotSoBadName() {}
}
